--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
         "titleBar.activeBackground": "#3c5a75",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#3c5a7599",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "commandCenter.border": "#e7e7e799"
     },
     "peacock.color": "#3c5a75",
     "BracketHighlighter.enableExtension": true
