--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react": "^18.0.15",
     "axios": "^0.27.2",
     "next": "12.1.6",
+    "node-fetch": "^3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
+    "swr": "^2.2.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
